# mcom

./: .gitignore  CMakeLists.txt  README.md  component.yaml
doc/: Mcom_Design.md  Mcom_Migration_Guide.md
examples/: CMakeLists.txt  calculator_example.cpp  example_action_client.cpp  example_action_server.cpp
include/mcom/: mcom.h  types.h
include/mcom/action/: action_client.h  action_server.h  error.h  goal_handle.h  maction.h  proto_action_client.h  proto_action_server.h  types.h
include/mcom/node/: node.h  node_config.h  node_state.h
include/mcom/service/: error.h  mservice.h  proto_service_client.h  proto_service_server.h  service_client.h  service_manager.h  service_server.h  types.h
include/mcom/topic/: proto_publisher.h  proto_publisher_impl.h  proto_subscriber.h  proto_subscriber_impl.h  publisher.h  publisher_impl.h  subscriber.h  subscriber_impl.h  topic_manager.h
src/action/: CMakeLists.txt  action_client.cpp  action_server.cpp  goal_handle.cpp
src/node/: node.cpp
src/service/: proto_service_client.cpp  proto_service_server.cpp  service_client.cpp  service_manager.cpp  service_server.cpp
src/topic/: publisher.cpp  subscriber.cpp  topic_manager.cpp
test/: CMakeLists.txt  test_action.cpp  test_service.cpp
